# AdapterBits

./: .gitignore  README.md
arduino/Picobit/: library.properties
arduino/Picobit/examples/mearm/: mearm.ino
arduino/Picobit/src/: Bubbleworks_PicoBit.h
c/: README.md
c/examples/spi_display/: CMakeLists.txt  ST7735.c  ST7735.h  main.c
circuitpython/: README.md
circuitpython/examples/: 4tronix_bitbotxl.py  audio_mixer.py  audio_mixer2.py  blink.py  i2c_scanner.py  kitronik_gamezip_pong.py  kitronik_piano.py  klef-piano.py  microbit_pimoroni_piano_hat.py  microbit_test.py  mime_mearm.py  pimoroni_envirobit.py  pimoroni_noisebit.py  pimoroni_pianohat.py  pimoroni_scrollbit_helloworld.py  pimoroni_speakerphat.py  pimoroni_touchbit_hid_keyboard.py  pimoroni_touchbit_simple.py  protopic_micropixel_edge.py  protopic_simonsays.py  test_uart.py  waveshare_lcd.py
circuitpython/examples/tracker/: code.py  test_code.py
circuitpython/examples/tracker/lib/: audio.py  audio.py.new  display.py  pianohat.py  tracker.py
circuitpython/install/: nano_rp2040.uf2  pi_pico.uf2  setup.sh  setup.txt
circuitpython/lib/nanobit/: adapterbit.py  nanobit.py
circuitpython/lib/picobit/: adapterbit.py  picobit.py
circuitpython/lib/shared/: microbit.py  music.py  neopixel.py  scrollbit.py  touchbit.py
docs/: picobit.md
